# bids-guidelines

./: .gitignore  README.md  pyproject.toml  run.py
guidelines/: cobidas.yaml  convert_cobidas.py  guidelines.py
guidelines/sources/: COBIDAS_AppendixD_clean_OSF.xlsx
